@@ -1,7 +1,20 @@
 package de.redsix.dmncheck.plugin;
 
+import static org.mockito.Mockito.when;
+
 import de.redsix.dmncheck.util.ProjectClassLoader;
 import de.redsix.dmncheck.validators.InputEntryTypeValidator;
+import java.io.File;
+import java.io.IOException;
+import java.net.URL;
+import java.net.URLClassLoader;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.List;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 import org.hamcrest.MatcherAssert;
 import org.hamcrest.Matchers;
 import org.junit.jupiter.api.Assertions;
@@ -12,28 +25,13 @@ import org.junit.jupiter.api.io.TempDir;
 import org.mockito.Mockito;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.io.File;
-import java.io.IOException;
-import java.net.URI;
-import java.net.URL;
-import java.net.URLClassLoader;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.List;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
-
-import static org.mockito.Mockito.when;
-
 @ExtendWith(MockitoExtension.class)
 class PluginBaseTest {
 
     private final PluginBase testee = Mockito.spy(PluginBase.class);
 
-    private final PrettyPrintValidationResults.PluginLogger emptyLogger = new PrettyPrintValidationResults.PluginLogger(
-            __ -> { }, __ -> { }, __ -> { });
+    private final PrettyPrintValidationResults.PluginLogger emptyLogger =
+            new PrettyPrintValidationResults.PluginLogger(__ -> {}, __ -> {}, __ -> {});
 
     @BeforeEach
     void init() {
@@ -47,19 +45,22 @@ class PluginBaseTest {
         Path folder1_1 = folder1.resolve("folder1-1");
         Path folder2 = temporaryFolder.resolve("folder2");
 
-        final List<String> dmnFileNames = Arrays.asList(temporaryFolder.toAbsolutePath() + File.separator + "file1.dmn",
-                                                        folder1.toAbsolutePath() + File.separator + "file1.dmn",
-                                                        folder1.toAbsolutePath() + File.separator + "file2.dmn",
-                                                        folder1_1.toAbsolutePath() + File.separator + "file2.dmn",
-                                                        folder2.toAbsolutePath() + File.separator + "file2.dmn");
+        final List<String> dmnFileNames = Arrays.asList(
+                temporaryFolder.toAbsolutePath() + File.separator + "file1.dmn",
+                folder1.toAbsolutePath() + File.separator + "file1.dmn",
+                folder1.toAbsolutePath() + File.separator + "file2.dmn",
+                folder1_1.toAbsolutePath() + File.separator + "file2.dmn",
+                folder2.toAbsolutePath() + File.separator + "file2.dmn");
 
-        final List<String> txtFileNames = Arrays.asList(temporaryFolder.toAbsolutePath() + File.separator + "file1.txt",
-                                                        folder1.toAbsolutePath() + File.separator + "file1.txt",
-                                                        folder1.toAbsolutePath() + File.separator + "file2.txt",
-                                                        folder1_1.toAbsolutePath() + File.separator + "file2.txt",
-                                                        folder2.toAbsolutePath() + File.separator + "file2.txt");
+        final List<String> txtFileNames = Arrays.asList(
+                temporaryFolder.toAbsolutePath() + File.separator + "file1.txt",
+                folder1.toAbsolutePath() + File.separator + "file1.txt",
+                folder1.toAbsolutePath() + File.separator + "file2.txt",
+                folder1_1.toAbsolutePath() + File.separator + "file2.txt",
+                folder2.toAbsolutePath() + File.separator + "file2.txt");
 
-        final List<String> allFileNames = Stream.concat(dmnFileNames.stream(), txtFileNames.stream()).collect(Collectors.toList());
+        final List<String> allFileNames =
+                Stream.concat(dmnFileNames.stream(), txtFileNames.stream()).toList();
 
         for (String fileName : allFileNames) {
             File file = new File(fileName);
@@ -72,15 +73,13 @@ class PluginBaseTest {
         // additional empty directory
         Files.createDirectory(folder1.resolve("folder1-0"));
 
-        final List<String> result = testee.getFileNames(Collections.singletonList(temporaryFolder))
-                                          .stream()
-                                          .map(Path::toAbsolutePath)
-                                          .map(Path::toString)
-                                          .collect(Collectors.toList());
+        final List<String> result = testee.getFileNames(Collections.singletonList(temporaryFolder)).stream()
+                .map(Path::toAbsolutePath)
+                .map(Path::toString)
+                .collect(Collectors.toList());
 
         MatcherAssert.assertThat(result, Matchers.containsInAnyOrder(dmnFileNames.toArray()));
     }
-
 
     @Test
     void shouldDetectSimpleDuplicateInFile() {
@@ -88,10 +87,10 @@ class PluginBaseTest {
         Assertions.assertTrue(containsErrors);
     }
 
-
     @Test
     void shouldAcceptDishDecisionRequirementGraphExample() {
-        Assertions.assertFalse(testee.testFiles(Collections.singletonList(getFile("decision-requirement-diagram.dmn"))));
+        Assertions.assertFalse(
+                testee.testFiles(Collections.singletonList(getFile("decision-requirement-diagram.dmn"))));
     }
 
     @Test
@@ -99,7 +98,6 @@ class PluginBaseTest {
         final boolean containsErrors = testee.testFiles(Collections.singletonList(getFile("cyclic-diagram.dmn")));
         Assertions.assertTrue(containsErrors);
     }
-
 
     @Test
     void shouldSkipFileIfHitpolicyIsCollect() {
@@ -123,7 +121,7 @@ class PluginBaseTest {
 
     @Test
     void shouldLoadNoValidatorFromConfig() {
-        when(testee.getValidatorClasses()).thenReturn(new String[] { });
+        when(testee.getValidatorClasses()).thenReturn(new String[] {});
 
         Assertions.assertTrue(testee.testFiles(Collections.singletonList(getFile("duplicate_unique.dmn"))));
     }
@@ -131,7 +129,9 @@ class PluginBaseTest {
     @Test
     void shouldLoadDuplicateRuleValidatorFromConfig() {
         when(testee.getValidatorClasses()).thenReturn(new String[] {InputEntryTypeValidator.class.getCanonicalName()});
-        when(testee.getValidatorPackages()).thenReturn(new String[] {InputEntryTypeValidator.class.getPackage().getName()});
+        when(testee.getValidatorPackages())
+                .thenReturn(
+                        new String[] {InputEntryTypeValidator.class.getPackage().getName()});
 
         Assertions.assertTrue(testee.testFiles(Collections.singletonList(getFile("duplicate_unique.dmn"))));
     }
@@ -161,8 +161,8 @@ class PluginBaseTest {
 
         Assertions.assertDoesNotThrow(() -> testee.loadProjectClasspath(Collections.singletonList(filename)));
 
-        Assertions.assertEquals(new URL("file:/foo.jar"),
-                ((URLClassLoader) ProjectClassLoader.INSTANCE.classLoader).getURLs()[0]);
+        Assertions.assertEquals(
+                new URL("file:/foo.jar"), ((URLClassLoader) ProjectClassLoader.INSTANCE.classLoader).getURLs()[0]);
     }
 
     private File getFile(final String filename) {
@@ -171,5 +171,4 @@ class PluginBaseTest {
         Assertions.assertNotNull(url, String.format("No such file %s", filename));
         return new File(url.getFile());
     }
-
 }
